@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Copyright (c) 2008-2010, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2008-2011, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -255,6 +255,14 @@ class TestTriangulateOp( unittest.TestCase ) :
 		result = TriangulateOp()( input = m )
 		self.assert_( result.arePrimitiveVariablesValid() )
 
+	def testInterpolationShouldntChange( self ) :
+	
+		m = MeshPrimitive.createPlane( Box2f( V2f( -1 ), V2f( 1 ) ) )
+		m.setTopology( m.verticesPerFace, m.vertexIds, "catmullClark" )
+		
+		TriangulateOp()( input = m, copyInput = False )
+	
+		self.assertEqual( m.interpolation, "catmullClark" )
 
 if __name__ == "__main__":
     unittest.main()
